[tool.poetry]
name = "ead-auth-user-python"
version = "1.0.0"
description = "ead-auth-user-python"
authors = ["Priscila Ferreira <priscilasanfer@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
alembic = "^1.16.2"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
unimport = "^1.2.1"
bandit = "^1.8.5"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
exclude = '.venv|alembic|node_modules|terraform|deploy|.git|build'
line-length = 120
target-version = ['py39']

[tool.isort]
skip = ['.venv', 'alembic', 'terraform', 'node_modules', 'functions', 'deploy', '.git', 'build']
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.unimport]
exclude = '(__init__.py)|.venv|alembic|node_modules|terraform|deploy|build'